# simulink_models

./: .gitignore  BiCycleModel.slx  CMakeLists.txt  FullDynamics_Model2.slx  LICENSE  Longitidunal_Vehicle_Dynamics.slx  LongitudinalControl.slx  MPT_MPC_Control.slx  MW_custom_RTOS_header.h  MyDrivelIne.slx  README.md  VehicleBicycleModel.slx  WorkingDynamics.slx  Working_Dynamics_Sparkle.slx  acc_settings.slx  acceleration_estimator.slx  brake_throttle.slx  builtin_typeid_types.h  cbf.slx  cbf.slx.r2021a  cbf_v2.slx  cbf_with_error.slx  cbf_with_lead_accel_est.slx  delay_brake.slx  differentiator.slx  director.cpp  director.h  director.slx  director_data.cpp  director_private.h  director_types.h  ert_main.cpp  explicit_cruise_planner.slx  explicit_rl_fitted.slx  explicitaccel.slx  explicitaccel_microaccel.slx  followerstoperth.slx  followerstoppermax.slx  followerstoppermax4rl.slx  followerstopperth.slx  (+41 more)
+bus_conv_fcns/+ros/+busToMsg/: RefCachedMap.mat
+bus_conv_fcns/+ros/+busToMsg/+std_msgs/: Float64.m
+bus_conv_fcns/+ros/+msgToBus/: RefCachedMap.mat
+bus_conv_fcns/+ros/+msgToBus/+std_msgs/: Bool.m
cbf/: package.xml
cbf/include/cbf/: rtGetInf.h  rtGetNaN.h  rtmodel.h  rtwtypes.h  slros_initialize.h
cbf/src/: cbf.cpp  rtGetInf.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp
clock2seconds/: clock2seconds.slx
modechanger/: modechanger.slx
oneShotAdder/: oneshotadder.slx
pid_simulink/: ghost_mode.slx  pid_design.slx  pid_design_old.slx
setpointreader/: setpointreader.slx
src/cbf/: CMakeLists.txt  packageInfo.mat
src/cbf/include/cbf/: cbf.h  cbf_private.h  cbf_types.h  rosnodeinterface.h  rt_nonfinite.h  slros_busmsg_conversion.h  visibility_control.h
src/cbf/src/: cbf_data.cpp  main.cpp  rosnodeinterface.cpp  rtGetNaN.cpp  slros_initialize.cpp
src/velocity_controller/: packageInfo.mat
src/velocity_controller/include/velocity_controller/: rosnodeinterface.h  rtGetNaN.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  velocity_controller_types.h  visibility_control.h
src/velocity_controller/src/: main.cpp  rtGetInf.cpp  rt_zcfcn.cpp  slros_initialize.cpp
velocity_controller/: mpc_init.m  pid_design.slx  pid_newtf.slx  velocity_controller.slx  velocity_controller_real_vehicle.slx
velocity_controller 2/: CMakeLists.txt  package.xml
velocity_controller 2/include/velocity_controller/: rtGetInf.h  rt_zcfcn.h  slros_busmsg_conversion.h  slros_initialize.h  velocity_controller.h  velocity_controller_private.h  zero_crossing_types.h
velocity_controller 2/src/: rosnodeinterface.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp  velocity_controller.cpp  velocity_controller_data.cpp
velocity_controller_gunter/: velocity_controller_variable_speed.slx
velocity_controller_sprinkle/: velocity_controller.slx
velocityramps/: velocityramp.slx  velocitysnapshot.slx
